--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-markdown-editor-lite": "^1.3.4",
     "react-syntax-highlighter": "^15.5.0",
@@ -54,6 +54,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
