--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "sharp": "^0.33.5",
+    "slonik": "^46.1.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
