--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^2.1.6",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
