--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "clsx": "^2.1.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "lucide-react": "^0.424.0",
     "markdown-it": "^14.1.0",
@@ -62,9 +61,11 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-typescript": "^7.24.7",
+    "@eslint/js": "^9.16.0",
     "@jest/globals": "^29.7.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
@@ -76,14 +77,17 @@
     "@vitest/coverage-v8": "^2.1.6",
     "@vitest/ui": "^2.1.6",
     "babel-jest": "^29.7.0",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.5",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.13.0",
     "jest": "^29.7.0",
     "jsdom": "^24.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.4",
     "typescript": "^5",
+    "typescript-eslint": "^8.17.0",
     "vitest": "^2.1.6"
   }
 }
