--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@vitest/coverage-v8": "^2.1.6",
     "@vitest/ui": "^2.1.6",
     "babel-jest": "^29.7.0",
+    "eslint-config-next": "^15.1.3",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.13.0",
     "jest": "^29.7.0",
